Add basic site layout

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,14 @@
   <title>Michanoku Weather</title>
 </head>
 <body>
-  
+  <div id="container">
+    <div id="location"></div>
+    <div id="current-condition"></div>
+    <div id="additional-information"></div>
+    <div id="center-search"></div>
+    <div id="weekly-overview"></div>
+    <div id="addition1"></div>
+    <div id="addition2"></div>
+  </div>
 </body>
 </html>
