Forget to add git commits!

--- a/src/template.html
+++ b/src/template.html
@@ -13,23 +13,31 @@
         <div id="svg"></div>
         <div id="temps">
           <div id="temp"></div>
-          <div>Feels like <span id="feelslike"></span></div>
+          <div id="feelslike"></div>
         </div>
-
       </div>
       <div id="conditions"></div>
     </div>
     <div id="current-condition">
-      WIND HUMIDITY PRECIPITATION CHANGE
+      <div id="precipitation"></div>
+      <div>Humidity: <span id="humidity"></span>%</div>
+      <div id="wind"></div>
+      <div>UV Index: <span id="uvindex"></span></div>
     </div>
     <div id="additional-information">
-      SUNRISE SUNSET % of day, time until sunset, etc.
+      <div id="time"></div>
+      <div id="sunrise"></div>
+      <div id="sunset"></div>
+      <div id="daylight"></div>
+      <div id="difference"></div>
+      <div id="progress"></div>
     </div>
     <div id="center-search">
       <input id="input" type="text">
       <button id="submit" type="button">Get Weather</button>
     </div>
-    <div id="weekly-overview"> DIVIDE INTO 7 </div>
+    <div id="weekly-overview">
+    </div>
   </div>
 </body>
 </html>
