--- a/src/template.html
+++ b/src/template.html
@@ -6,9 +6,10 @@
   <title>Michanoku Weather</title>
 </head>
 <body>
+  <div id="fade-layer"></div>
   <div id="container">
+    <div id="resolvedAddress"></div>
     <div id="location">
-      <div id="resolvedAddress"></div>
       <div id="svg-temp">
         <div id="svg"></div>
         <div id="temps">
@@ -26,18 +27,28 @@
     </div>
     <div id="additional-information">
       <div id="time"></div>
-      <div id="sunrise"></div>
-      <div id="sunset"></div>
-      <div id="daylight"></div>
-      <div id="difference"></div>
-      <div id="progress"></div>
+      <div id="progress-container">
+        <div id="sun">
+          <svg xmlns="http://www.w3.org/2000/svg" height="2rem" width="2rem" fill="currentColor" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z" />
+          </svg>
+        </div>
+      </div>
+      <div id="progress-bar">
+        <div id="progress-current"></div> 
+        <div id="difference"></div>
+      </div>
+      <div id="sunrise-sunset">
+        <div id="sunrise"></div>
+        <div id="sunset"></div>
+      </div>
     </div>
     <div id="center-search">
       <input id="input" type="text">
       <button id="submit" type="button">Get Weather</button>
     </div>
-    <div id="weekly-overview">
-    </div>
+    <div id="weekly-overview"></div>
+    <div id="credits"></div>
   </div>
 </body>
 </html>
